# bayscrape

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bayscrape.py  bsutils.py  color.py  comment.py  details.py  main.py  proxies.py  pyproject.toml  requirements.txt  results.py  setup.cfg  setup.py  soup.py
