[tool.poetry]
name = "bayscrape"
version = "0.2"
description = "Browse legal torrents from the comfort of your command-line."
authors = ["Matt Kelley <mattshu32@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
beautifultable = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
